[package]
name = "app"
version = "0.1.0"
description = "Archbroski"
authors = ["Viktor Magyari"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
itertools = "0.10.2"
once_cell = "1.9.0"
rayon = "1.5.1"
retry = "1.3.1"
dashmap = { version = "5.1.0", features = ["serde"] }
serde_json = "1.0"
bincode = "1.3.3"
thiserror = "1.0.30"
dirs = "4.0"
scrap = "0.5"
opencv = { version = "0.63", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["api-all", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
