[package]
name = "app"
version = "0.2.0"
description = "Archbroski"
authors = ["Viktor Magyari"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
itertools = "0.10.3"
once_cell = "1.9.0"
rayon = "1.5.1"
retry = "1.3.1"
dashmap = { version = "5.1.0", features = ["serde", "rayon"] }
serde_json = "1.0"
bincode = "1.3.3"
thiserror = "1.0.30"
log = "0.4.14"
log4rs = "1.0.0"
log-panics = "2.0.0"
dirs = "4.0"
scrap = "0.5"
opencv = { version = "0.63", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
tao = "0.6.2"
tauri = { version = "1.0.0-rc.4", features = ["api-all", "system-tray"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.33.0"
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
